<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterInfo">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:fontFamily="@font/psb"
        android:id="@+id/RegisterInfoWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_info_welcome"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:padding="8sp"
        android:background="#0D47A1"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_toEndOf="@+id/Step_Three"
        />

    <TextView
        android:fontFamily="@font/psb"
        android:id="@+id/hint_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:layout_below="@+id/RegisterInfoWelcome"
        android:textAlignment="center"
        android:textSize="18sp"
        android:padding="8sp"
        android:textStyle="bold"/>

    <TextView
        android:fontFamily="@font/psb"
        android:id="@+id/Step_Three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Step_Three"
        android:layout_alignParentTop="true"
        android:padding="8sp"
        android:textSize="16sp"
        android:background="#00ACC1"
        android:textColor="#ffffff"
        />

    <EditText
        android:fontFamily="@font/psb"
        android:id="@+id/UsernameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:inputType="text"
        android:hint="@string/username_text"
        android:textSize="18sp"
        android:layout_above="@+id/PasswordBox"/>

    <EditText
        android:fontFamily="@font/psb"
        android:id="@+id/PasswordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:inputType="textPassword"
        android:hint="@string/password_text"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        />

    <Button
        android:fontFamily="@font/psb"
        android:id="@+id/Final_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:background="#0D47A1"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>
</android.support.constraint.ConstraintLayout>