<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:fontFamily="@font/psb"
            android:id="@+id/StudentInfo_Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_welcome"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/Step_Two"
            android:padding="8sp"
            android:background="#0D47A1"
            android:textColor="#ffffff"
            />

        <TextView
            android:fontFamily="@font/psb"
            android:id="@+id/Step_Two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Step_Two"
            android:textSize="16sp"
            android:padding="8sp"
            android:layout_alignParentTop="true"
            android:background="#00ACC1"
            android:textColor="#ffffff"
            />

        <EditText
            android:fontFamily="@font/psb"
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LastName"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:hint="@string/first_name"
            />

        <EditText
            android:fontFamily="@font/psb"
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/EmailText"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:hint="@string/last_name"
            />

        <EditText
            android:fontFamily="@font/psb"
            android:id="@+id/EmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_text"
            android:textSize="18sp"/>

        <Button
            android:fontFamily="@font/psb"
            android:id="@+id/Registration_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_text"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:background="#0D47A1"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true"
            style="?android:attr/borderlessButtonStyle"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>